--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@vitejs/plugin-react": "^4.3.4",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.0.0"
