--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "react-router-dom": "^6.0.0"
     },
     "devDependencies": {
-        "vite": "^4.0.0"
+        "@vitejs/plugin-react": "^4.3.4",
+        "vite": "^4.5.11"
     }
 }
