--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "devDependencies": {
         "@vitejs/plugin-react": "^4.3.4",
+        "sass": "^1.86.2",
         "vite": "^4.5.11"
     }
 }
