--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     },
     "dependencies": {
         "antd": "^5.24.6",
+        "dotenv": "^16.5.0",
+        "express": "^5.1.0",
+        "mongodb": "^6.16.0",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.0.0",
