--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@neondatabase/serverless": "^1.0.0",
         "antd": "^5.24.6",
+        "dotenv": "^16.5.0",
+        "pg": "^8.15.6",
         "react": "^18.0.0",
         "react-dom": "^18.0.0",
         "react-router-dom": "^6.0.0",
