--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.5",
+    "react-native-document-picker": "^9.3.1",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "5.4.0",
@@ -28,8 +30,11 @@
     "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.3",
     "react-native-web": "^0.20.0",
+    "react-native-webview": "^13.15.0",
+    "react-native-youtube-iframe": "^2.4.1",
     "react-router-dom": "^6.0.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "expo-document-picker": "~13.1.6"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
