--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "antd": "^5.24.6",
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "expo": "^53.0.20",
+    "expo-document-picker": "~13.1.6",
     "pg": "^8.15.6",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -33,8 +35,7 @@
     "react-native-webview": "^13.15.0",
     "react-native-youtube-iframe": "^2.4.1",
     "react-router-dom": "^6.0.0",
-    "react-toastify": "^11.0.5",
-    "expo-document-picker": "~13.1.6"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.4",
